# GREED-game

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  index.html  script.sh
include/controller/: GameController.h  GameController.hpp  InputHandler.h  InputHandler.hpp  InputManager.h  InputManager.hpp  MenuController.h  MenuController.hpp
include/core/: Color.h  Directions.h
include/interfaces/: ICell.h  ICell.hpp  ICellInteractionVisitor.h  ICellInteractionVisitor.hpp  ICellRenderVisitor.h  ICellRenderVisitor.hpp
include/model/: Cell.h  CellGenerator.h  CellGenerator.hpp  GameModel.h  GameModel.hpp  Grid.h  Grid.hpp  InteractionHandler.h  InteractionHandler.hpp  Leaderboard.h  Player.h  Player.hpp  Position.h  Position.hpp
include/model/cells/: BasicCell.h  BasicCell.hpp  BombCell.h  BombCell.hpp  TeleportCell.h  TeleportCell.hpp
include/view/: ConsoleRenderer.h  ConsoleRenderer.hpp  GameView.h  GameView.hpp  Settings.h  Settings.hpp
media/: installation.md  menu.md  rules.md
src/: main.cpp
src/controller/: GameController.cpp  InputHandler.cpp  InputManager.cpp  MenuController.cpp
src/model/: Cell.cpp  CellGenerator.cpp  GameModel.cpp  Grid.cpp  InteractionHandler.cpp  Leaderboard.cpp  Player.cpp  Position.cpp
src/model/cells/: BasicCell.cpp  BombCell.cpp  TeleportCell.cpp
src/view/: ConsoleRenderer.cpp  GameView.cpp  Settings.cpp
